# ultronPrototype

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  baselines.json  baselines_phase6.json  config.yaml  pyproject.toml
config/: settings.py
docs/: 4b_optimization_plan.md  codebase_structure.md  comprehensive_quality_plan.md  comprehensive_quality_report.md  comprehensive_test_plan.md  comprehensive_test_report.md  config_discovery.md  configuration.md  latency_optimizations_V1.md  memory_architecture.md  mobile_node_setup.md  model_checksums.md  openclaw_browser_setup.md  openclaw_cron_setup.md  openclaw_desktop_control_setup.md  openclaw_gaming_mode_setup.md  openclaw_heartbeat_setup.md  openclaw_hooks_setup.md  openclaw_integration.md  openclaw_integration_final_summary.md  openclaw_media_generation_setup.md  openclaw_memory_wiki_setup.md  openclaw_runtime.md  openclaw_telegram_setup.md  phase3_5_followup.md  phase_1_summary.md  phase_3_summary.md  phase_4_summary.md  phase_5_summary.md  phase_6_summary.md  preflight_decision.md  standing_orders.md  system_inventory.md  test_sweep_binding_rules.md
docs/twitch_integration/: 00_STATUS.md  WAKEUP.md
firmware/leonardo_ptt_LEGACY_CDC_DO_NOT_FLASH/: README.md  leonardo_ptt.ino.DO_NOT_FLASH
firmware/leonardo_ptt_hid/: README.md  leonardo_ptt_hid.ino
prompts/coding/: claude_code_initial_new.j2
scripts/: _bench_llm_http.py  _debug_retrieval_cosine.py  _log_proxy.py  _merge_phase0_baselines.py  _quality_q10_iter1_verify.py  _quality_q6f_rescore.py  _record_phase0_baseline.py  _voice_lines_verify.py  _vram_peak_monitor.py  audio_diagnostic.py  autonomous_e2e_harness.py  bench_llm_ubatch.py  bench_stt_latency.py  benchmark.py  benchmark_preflight.py  build_common_words.py  check_vram.py  comprehensive_memory_quality.py  comprehensive_search_blending.py  comprehensive_test_harness.py  download_models.py  embedder_server.py  eval_harness.py  last_session.py  maintenance.py  measure_baseline.py  measure_baseline_extended.py  migrate_embeddings.py  ptt_test.py  quality_harness.py  quality_q3_web.py  quality_q6_claude.py  quality_q6_mocked.py  real_api_smoke.py  run_kenning_mcp_for_openclaw.py  run_maintenance_for_cron.py  run_orchestration_tests.py  run_tests.py  run_ultron_mcp_for_openclaw.py  segment_for_finetune.py  (+12 more)
scripts/flavor_audit/: lint_tails.py
scripts/flavor_gen/: apply_curated.py  apply_cuts.py  curated_overrides.py  integrate_tails.py
scripts/relay_test/: analyze_outputs.py  corpus.py  corpus_packs.py  harness.py  make_audit_chunks.py  pipeline_trace.py  probe.py  scorecard.py  spotify_matrix.py  trace_corpus.py
src/kenning/: __main__.py  config.py  diagnostics.py
src/ultron/: __init__.py  config.py  errors.py  local_clock_reply.py  response_style.py  trace.py  uncertainty.py
tests/: conftest.py  test_addressing.py  test_anchors.py  test_architect_narrator.py  test_audio.py  test_benchmark_preflight.py  test_canonical_monitor_runner_wiring.py  test_capture_stall_watchdog.py  test_coding_bridge.py  test_coding_hybrid_dispatch.py  test_coding_intent.py  test_coding_projects.py  test_coding_run_launch.py  test_coding_runner.py  test_coding_runner_anchors.py  test_coding_voice.py  test_coding_voice_desktop_native.py  test_compression.py  test_context_scoring.py  test_coordinator.py  test_deep_research.py  test_draft_model.py  test_effective_config_log.py  test_embeddings_swap.py  test_eval_harness.py  test_gaming_mode.py  test_intent_dispatch_pipeline.py  test_intent_recognizer.py  test_kokoro_engine.py  test_llm_batch_tunables.py  test_llm_enable_thinking.py  test_llm_http_runtime.py  test_llm_intent_adaptive_condenser.py  test_llm_memory_suppression.py  test_llm_persona_source.py  test_llm_precomputed_rag.py  test_llm_preset.py  test_llm_prompt_injection_defense.py  test_llm_rag_position.py  test_llm_spec_decoding.py  (+53 more)
tests/agent_loop/: test_deep_loops.py  test_loop_detection.py
tests/audio/: test_command_normalizer.py  test_corpus_25k_fixes.py  test_corpus_audit_fixes.py  test_intent_gate.py  test_model_lab_switch.py  test_output_quality.py  test_relay_speech.py  test_relay_speech_expansion.py  test_social_marvel_answer.py  test_social_novel.py  test_stop_button.py  test_stt_correct.py  test_thinking_mode.py  test_twitch_chat_toggle.py  test_u1_llm_route.py  test_ultron_prompt.py  test_waveform.py
tests/bus/: test_event.py  test_events_catalog.py  test_service.py
tests/checkpoints/: test_exclusions.py  test_registry.py  test_restore.py  test_shadow_repo.py
tests/coding/: conftest.py  mock_bridge.py  test_ai_comment_watcher.py  test_architect_supervisor.py  test_coder_modes.py  test_commit_message.py  test_confirm_group.py  test_deep_click_fallback.py  test_dialog_auto_handler.py  test_edit_diagnostics.py  test_edit_recovery.py  test_file_history.py  test_file_mention_resolver.py  test_file_read_cache.py  test_focus_chain.py  test_forfeit.py  test_lint_diff.py  test_mention_resolvers.py  test_mock_bridge_smoke.py  test_orchestration.py  test_orchestration_real.py  test_patch_v4a.py  test_project_digest.py  test_project_index.py  test_project_introspect.py  test_project_supervisor.py  test_repo_map.py  test_sandbox_isolation.py  test_scrap.py  test_stt_bias.py  test_submit_review.py  test_supervisor_dispatch.py  test_supervisor_dispatch_architect_narrator.py  test_window_expand.py  test_window_state.py
tests/data/: voice_lines_golden_digest.json
tests/desktop/: test_browser_use.py  test_click_preview.py  test_input_control.py  test_launcher.py  test_monitors.py  test_screen_context.py  test_uia.py  test_voice.py  test_win32_helpers.py  test_windows.py
tests/error_recovery/: test_addressing_failures.py  test_claude_code_failures.py  test_filesystem_failures.py  test_mcp_server_failures.py
tests/eval/: corpus.jsonl
tests/events/: test_callbacks.py  test_processors.py
tests/evolution/: test_blast_radius.py  test_guardrails.py  test_intent.py  test_personality.py  test_service.py
training/: compare_wake_models.py  kenning_model.yaml  smoketest_memory.py  smoketest_orchestrator.py
(+547 files in other folders)
