[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenning"
version = "0.1.0"
description = "Local voice-first AI assistant prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kenning Project" }]
dependencies = [
    "numpy>=1.24,<2.0",
    "sounddevice>=0.4.6",
    "pyserial>=3.5",          # external USB-HID auto push-to-talk (kenning.ptt)
    "silero-vad>=5.1",
    "openwakeword>=0.6",
    "faster-whisper>=1.0",
    "llama-cpp-python>=0.3",
    "piper-tts>=1.2",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.23",
    "onnxruntime>=1.17",
    "torch>=2.1",
    "infer-rvc-python>=1.0",
    "scipy>=1.10",
    "sentence-transformers>=2.7",
    "tree_sitter>=0.21",
    "grep_ast>=0.3",
    "watchfiles>=0.21",
    # 2026-05-22 catalog batch 12: slimdown_html (bs4) + pandoc (pypandoc)
    # for web-search readers. pypandoc additionally requires the Pandoc
    # SYSTEM binary; readers fail-open + skip the conversion if missing.
    # Playwright is intentionally NOT a hard dep (~150 MB Chromium
    # download); PlaywrightReader gracefully no-ops when missing.
    "beautifulsoup4>=4.12",
    "pypandoc>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    # 2026-05-21: pytest-timeout enforces a per-test wall-clock cap so
    # one hung test can't block the entire sweep at ~0 % CPU. Combined
    # with the pre-flight concurrent-run check in tests/conftest.py,
    # this eliminates the "sweep keeps running into issues" failure
    # mode that recurred during the frontier-enhancement pass.
    "pytest-timeout>=2.0",
    # 2026-05-22 catalog batch 4: FATAL-only flake8 for the pre-write
    # lint cascade. Listed as a devdep because the listener is opt-in
    # via ``coding.pre_write_lint.enabled`` and gracefully degrades
    # to "skip the flake8 layer" when the binary isn't on PATH.
    "flake8>=6.0",
]

[project.scripts]
kenning = "kenning.__main__:main"
# scripts/cleanup_stale_processes.py is invoked directly
# (`python scripts/cleanup_stale_processes.py`); not registered here
# because scripts/ is not a package.

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# 2026-05-21 testing-process hardening:
# - ``--timeout=30 --timeout-method=thread``: each test gets at most 30s
#   of wall clock; any hang surfaces as ``Failed: Timeout >30.0s`` naming
#   the offending test, instead of silently freezing the sweep.
# - ``--durations=10``: at the end of every run, the 10 slowest tests
#   are reported so we can see what's eating time before it becomes a
#   hang.
addopts = "-p no:hydra_pytest --timeout=30 --timeout-method=thread --durations=10"
markers = [
    "slow: loads local models or real hardware",
]
# Tests that genuinely need >30s (e.g., GPU-gated full model loads) should
# override per-test with ``@pytest.mark.timeout(120)`` rather than
# relaxing this default.
